--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
     }
   ],
   "require": {
-    "pecee/simple-router": "5.4.1.7"
+    "pecee/simple-router": "5.4.1.7",
+    "ebanx/stream": "^2.0"
   },
   "require-dev": {
     "phpunit/phpunit": "^10.5",
