--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,9 @@
   ],
   "require": {
     "pecee/simple-router": "5.4.1.7",
-    "ebanx/stream": "^2.0"
+    "ebanx/stream": "^2.0",
+    "robinvdvleuten/ulid": "^5.0",
+    "cakephp/chronos": "^3.0"
   },
   "require-dev": {
     "phpunit/phpunit": "^10.5",
